# OmniScope-rs

./: .gitignore  ARCHITECTURE_ADJUSTMENT.md  BUILD_ENV.md  CHANGELOG.md  COMPILE_SPEED.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  LICENSE  LIMITATIONS.md  Makefile  PLATFORM_SUPPORT.md  README.md  README_CN.md  SEMANTIC_TREE_PLAN.md  build.rs  bun_fp_reduction_plan.md  code_review.md  code_review_full.md  code_review_report.md  impl.md  improve.md  liballocator_shim.rlib  libtest.rlib  omniscope.toml  optimization_report.md  perf-analysis.md  plat_ir.md  platform_filters.toml  review-report.md  rust-toolchain.toml  tasks.md  test_deep_detectors.sh  todolist.md
crates/omniscope-cli/: Cargo.toml
crates/omniscope-cli/src/: main.rs
crates/omniscope-cli/src/output/: json.rs  mod.rs  rich.rs  sarif.rs
crates/omniscope-core/: Cargo.toml
crates/omniscope-core/src/: diagnostics.rs  error.rs  fact.rs  issue.rs  issue_candidate.rs  lib.rs  memory_pool.rs  profiler.rs  risk_score.rs  terminal_report.rs
crates/omniscope-core/src/finding_view/: mod.rs  tests.rs
crates/omniscope-dataflow/: Cargo.toml
crates/omniscope-dataflow/src/: analysis.rs  function_summary.rs  graph.rs  lib.rs
crates/omniscope-ir/: Cargo.toml
crates/omniscope-ir/src/: debug_info.rs  instruction_parser.rs  ir_cache.rs  ir_model.rs  ir_model_tests.rs  lib.rs  llvm_sys_adapter.rs  loader.rs  loader_v2.rs  location.rs  parser.rs  platform.rs  safe_wrappers.rs  view.rs
crates/omniscope-ir/tests/: llvm_sys_test.rs
crates/omniscope-pass/: Cargo.toml
crates/omniscope-pass/benches/: analysis_passes.rs
crates/omniscope-pass/src/: lib.rs  manager.rs  module_index.rs  pass.rs
crates/omniscope-pass/src/analysis/: borrow_escape.rs  boundary_inference.rs  boundary_seeds.rs  call_graph.rs  danger_surface.rs  ffi_boundary_detector.rs  heap_provenance.rs  interior_mutability.rs  mod.rs  noise_reduction.rs  raii_drop.rs  surface_classifier_pass.rs  write_to_immutable.rs
crates/omniscope-pass/src/foundation/: mod.rs
crates/omniscope-pass/src/resource/: abi_layout_pass.rs  contract_graph_builder.rs  contract_graph_builder_tests.rs  cross_function_lifetime_pass.rs  evidence_bundle.rs  ffi_return_check.rs  incremental_cache.rs  ir_behavior_summary_pass.rs  ir_behavior_summary_pass_tests.rs  issue_candidate_builder.rs  issue_gate.rs  issue_verifier.rs  language_adapter_fact_pass.rs  may_alias.rs  mod.rs  noreturn.rs  ownership_solver.rs  path_sensitive_leak.rs  pattern_to_facts.rs  raw_fact_collector.rs  risk_scoring.rs  rust_drop_tracker.rs  structural_inference_pass.rs  summary_builder.rs  union_find.rs
crates/omniscope-pass/src/resource/issue_candidate_builder/: grouping.rs  helpers.rs  mod.rs  pattern_candidates.rs  tests.rs  tests_dual_evidence.rs
crates/omniscope-pass/src/resource/issue_verifier/: cross_family.rs  double_free.rs  helpers.rs  leak.rs  mod.rs  tests.rs
crates/omniscope-pass/src/resource/path_sensitive_leak/: analysis.rs  helpers.rs  mod.rs  tests.rs
crates/omniscope-pass/src/resource/reconcile/: mod.rs  tests.rs
crates/omniscope-pipeline/: Cargo.toml
crates/omniscope-pipeline/src/: lib.rs  pipeline.rs  project_pipeline.rs  result.rs  tests.rs
crates/omniscope-pipeline/tests/: integration_matrix.rs
crates/omniscope-registry/: Cargo.toml
crates/omniscope-registry/src/: lib.rs  semantic_registry.rs
crates/omniscope-semantics/: Cargo.toml
crates/omniscope-semantics/proptest-regressions/resource/: allocator_shim.txt
crates/omniscope-semantics/proptest-regressions/resource/semantic_tree/tests/: proptest.txt
crates/omniscope-semantics/src/: language_detector.rs  lib.rs  surface_classifier.rs  zone_classifier.rs
crates/omniscope-semantics/src/resource/: allocator_shim.rs  bounds_check_pattern.rs  buffer_overflow_detector.rs  confidence_scorer.rs  container_type.rs  cross_function_lifetime.rs  escape.rs  family_inference.rs  family_registry.rs  go_adapter.rs  ir_pattern.rs  ir_pattern_tests.rs  length_truncation_detector.rs  length_truncation_detector_tests.rs  memory_graph.rs  mod.rs  node_adapter.rs  ownership_state.rs  rust_adapter.rs  semantic_engine.rs  semantic_tree.rs  summary.rs  summary_inference.rs  test_matrix.rs  type_confusion_detector.rs  type_confusion_detector_helpers.rs  type_confusion_detector_tests.rs  wasm_adapter.rs
crates/omniscope-semantics/src/resource/abi_layout_detector/: detector.rs  mod.rs  tests.rs  types.rs
crates/omniscope-semantics/src/resource/cpp_adapter/: exception.rs  mod.rs  raii.rs  smart_pointer.rs  template.rs
crates/omniscope-semantics/src/resource/cpp_adapter/tests/: exception_tests.rs  mod.rs  (+2 more)
crates/omniscope-semantics/src/resource/csharp_adapter/: dispose.rs  gc.rs  mod.rs  pinvoke.rs
crates/omniscope-semantics/src/resource/ffi_contract/: builtin.rs  database.rs  mod.rs  test.rs  types.rs
crates/omniscope-semantics/src/resource/java_adapter/: exception.rs  jni.rs  mod.rs  reference.rs
crates/omniscope-semantics/src/resource/python_adapter/: exception.rs  gil.rs  memory.rs  mod.rs  patterns.rs  refcount.rs
crates/omniscope-semantics/src/resource/rust_stdlib_whitelist/: mod.rs  patterns.rs  stdlib.rs  third_party.rs  trie.rs
crates/omniscope-semantics/src/resource/semantic_tree/: kind.rs  mod.rs  node.rs  provenance.rs  syscall.rs  tests.rs  tree.rs  type_semantic.rs
crates/omniscope-semantics/src/resource/structural_inference/: bridge_inference.rs  destructor_inference.rs  drop_glue_inference.rs  into_raw_inference.rs  library_alloc_pairs_inference.rs  mod.rs  param_attr_inference.rs  posix_syscall_inference.rs  refcount_inference.rs  static_lifetime_inference.rs
crates/omniscope-types/: Cargo.toml
crates/omniscope-types/src/: abi.rs  boundary.rs  call_graph_types.rs  config.rs  effect.rs  escape.rs  evidence.rs  lib.rs  lifetime.rs  may_alias.rs  module_summary.rs  ownership.rs  path_evidence.rs  pointer_contract.rs  project_index.rs  resource_family.rs  zone_types.rs
pass/: .clang-tidy  CMakeLists.txt  SafetyExportPass.cpp  build.sh
tools/ir_extractor/: CMakeLists.txt  build.sh  ir_extractor.cpp
(+158 files in other folders)
