[package]
name = "omniscope"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["OmniScope Team"]
description = "LLVM IR-based static analyzer for cross-language FFI security auditing"
license = "Apache-2.0"
repository = "https://github.com/Timwood0x10/OmniScope-rs"
readme = "README.md"
keywords = ["static-analysis", "llvm", "ffi", "security", "analyzer"]
categories = ["development-tools", "development-tools::debugging"]

[workspace]
members = [
    "crates/omniscope-core",
    "crates/omniscope-types",
    "crates/omniscope-ir",
    "crates/omniscope-dataflow",
    "crates/omniscope-semantics",
    "crates/omniscope-registry",
    "crates/omniscope-pass",
    "crates/omniscope-pipeline",
    "crates/omniscope-cli",
]

[workspace.dependencies]
# === LLVM Bindings ===
inkwell = { version = "0.4", features = ["llvm12-0"] }

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# === Error Handling ===
thiserror = "1.0"
anyhow = "1.0"
miette = { version = "5.10", features = ["fancy"] }

# === CLI ===
clap = { version = "4.4", features = ["derive", "color"] }

# === Parallelism ===
rayon = "1.8"
crossbeam = "0.8"

# === Memory Management ===
bumpalo = "3.14"
typed-arena = "2.0"

# === Collections ===
dashmap = "5.5"
indexmap = "2.2"
smallvec = "1.11"
bitvec = "1.0"

# === Lazy & Caching ===
once_cell = "1.19"
lru = "0.12"

# === Logging & Profiling ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-flame = "0.2"

# === String Processing ===
regex = "1.10"
glob = "0.3"
unicode-segmentation = "1.10"

# === File System ===
walkdir = "2.4"
tempfile = "3.9"

# === Compression ===
libz-sys = "1.1"

# === Date/Time ===
chrono = { version = "0.4", features = ["serde"] }

# === UUID ===
uuid = { version = "1.6", features = ["v4", "serde"] }

# === Dev Dependencies ===
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
assert_matches = "1.5"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true

[profile.test]
opt-level = 2
debug = true
