[package]
name = "omniscope"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["OmniScope Team"]
description = "LLVM IR-based static analyzer for cross-language FFI security auditing"
license = "Apache-2.0"
repository = "https://github.com/Timwood0x10/OmniScope-rs"
readme = "README.md"
keywords = ["static-analysis", "llvm", "ffi", "security", "analyzer"]
categories = ["development-tools", "development-tools::debugging"]

[dependencies]
chrono = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
omniscope-core = { path = "crates/omniscope-core" }
omniscope-ir = { path = "crates/omniscope-ir" }
omniscope-pipeline = { path = "crates/omniscope-pipeline" }
omniscope-pass = { path = "crates/omniscope-pass" }
omniscope-semantics = { path = "crates/omniscope-semantics" }
omniscope-types = { path = "crates/omniscope-types" }
serde_json = "1.0"

[[bench]]
name = "ir_parsing"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "resource_analysis"
harness = false

[workspace]
members = [
    "crates/omniscope-core",
    "crates/omniscope-types",
    "crates/omniscope-ir",
    "crates/omniscope-dataflow",
    "crates/omniscope-semantics",
    "crates/omniscope-pass",
    "crates/omniscope-pipeline",
    "crates/omniscope-cli",
]

[workspace.dependencies]
# === LLVM Bindings ===
inkwell = { version = "0.9.0", features = ["llvm12-0"] }

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"

# === Error Handling ===
thiserror = "2.0.18"
anyhow = "1.0"
miette = { version = "7.6.0", features = ["fancy"] }

# === CLI ===
clap = { version = "4.4", features = ["derive", "color"] }

# === Parallelism ===
rayon = "1.8"
crossbeam = "0.8"

# === Memory Management ===
bumpalo = "3.14"
typed-arena = "2.0"
smallvec = { version = "1.13", features = ["serde"] }

# === Concurrency ===
dashmap = "6.1"
parking_lot = "0.12"
once_cell = "1.19"
indexmap = "2.2"

# === Date/Time ===
chrono = { version = "0.4", features = ["serde"] }

# === Logging ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# === UUID ===
uuid = { version = "1.8", features = ["v4", "serde"] }

# === Testing ===
pretty_assertions = "1.4"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
strip = true

[profile.test]
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 16
