[package]
name = "omniscope-cli"
version = "0.1.0"
edition = "2021"
authors = ["OmniScope Team"]
description = "Command-line interface for OmniScope static analyzer"
license = "Apache-2.0"
repository = "https://github.com/Timwood0x10/OmniScope-rs"
keywords = ["static-analysis", "llvm", "cli", "ffi", "security"]
categories = ["command-line-utilities", "development-tools", "development-tools::debugging"]

[[bin]]
name = "omniscope"
path = "src/main.rs"

[dependencies]
omniscope-core = { path = "../omniscope-core" }
omniscope-types = { path = "../omniscope-types" }
omniscope-ir = { path = "../omniscope-ir" }
omniscope-pipeline = { path = "../omniscope-pipeline" }

clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = "3.1.1"
serde_json = { workspace = true }
omniscope-pass = { path = "../omniscope-pass" }

[dev-dependencies]
pretty_assertions = { workspace = true }
