[package]
name = "omniscope-core"
version = "0.9.0"
edition = "2021"
rust-version = "1.75"
authors = ["OmniScope Team"]
description = "Core infrastructure and base types for OmniScope static analyzer"
license = "Apache-2.0"
repository = "https://github.com/Timwood0x10/OmniScope-rs"
keywords = ["static-analysis", "llvm", "ffi", "core", "infrastructure"]
categories = ["development-tools", "development-tools::debugging"]

[dependencies]
# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Collections
dashmap = { workspace = true }
indexmap = { workspace = true }

# Memory management
bumpalo = { workspace = true }

# Internal dependencies
omniscope-types = { version = "0.9.0", path = "../omniscope-types" }

# Logging
tracing = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
