[package]
name = "omniscope-dataflow"
version = "0.1.0"
edition = "2021"
authors = ["OmniScope Team"]
description = "Dataflow engine for OmniScope"
license = "Apache-2.0"

[dependencies]
omniscope-core = { path = "../omniscope-core" }
omniscope-types = { path = "../omniscope-types" }
omniscope-ir = { path = "../omniscope-ir" }

dashmap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
