[package]
name = "omniscope-dataflow"
version = "0.9.0"
edition = "2021"
authors = ["OmniScope Team"]
description = "Dataflow analysis engine for tracking value flow and dependencies in OmniScope"
license = "Apache-2.0"
repository = "https://github.com/Timwood0x10/OmniScope-rs"
keywords = ["static-analysis", "llvm", "dataflow", "analysis", "ffi"]
categories = ["development-tools", "development-tools::debugging"]

[dependencies]
omniscope-core = { version = "0.9.0", path = "../omniscope-core" }
omniscope-types = { version = "0.9.0", path = "../omniscope-types" }
omniscope-ir = { version = "0.9.0", path = "../omniscope-ir" }

thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
