[package]
name = "omniscope-ir"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["OmniScope Team"]
description = "LLVM IR abstraction layer and parser for OmniScope static analyzer"
license = "Apache-2.0"
repository = "https://github.com/Timwood0x10/OmniScope-rs"
keywords = ["static-analysis", "llvm", "ir", "parser", "ffi"]
categories = ["development-tools", "development-tools::debugging", "parser-implementations"]

[features]
default = []
llvm-backend = ["llvm-sys"]

[dependencies]
omniscope-core = { path = "../omniscope-core" }
omniscope-types = { path = "../omniscope-types" }

anyhow = { workspace = true }
llvm-sys = { version = "221", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
