[package]
name = "omniscope-ir"
version = "0.9.0"
edition = "2021"
rust-version = "1.75"
authors = ["OmniScope Team"]
description = "LLVM IR abstraction layer and parser for OmniScope static analyzer"
license = "Apache-2.0"
repository = "https://github.com/Timwood0x10/OmniScope-rs"
keywords = ["static-analysis", "llvm", "ir", "parser", "ffi"]
categories = ["development-tools", "development-tools::debugging", "parser-implementations"]

[features]
default = []
llvm-backend = ["llvm-sys"]

[dependencies]
omniscope-core = { version = "0.9.0", path = "../omniscope-core" }
omniscope-types = { version = "0.9.0", path = "../omniscope-types" }

anyhow = { workspace = true }
llvm-sys = { version = "221", optional = true }
rmp-serde = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
