[package]
name = "omniscope-pass"
version = "0.1.0"
edition = "2021"
authors = ["OmniScope Team"]
description = "Analysis passes for FFI safety, memory safety, and concurrency in OmniScope"
license = "Apache-2.0"
repository = "https://github.com/Timwood0x10/OmniScope-rs"
keywords = ["static-analysis", "llvm", "passes", "analysis", "ffi", "memory-safety"]
categories = ["development-tools", "development-tools::debugging"]

[dependencies]
omniscope-core = { path = "../omniscope-core" }
omniscope-types = { path = "../omniscope-types" }
omniscope-ir = { path = "../omniscope-ir" }
omniscope-dataflow = { path = "../omniscope-dataflow" }
omniscope-semantics = { path = "../omniscope-semantics" }

rayon = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
omniscope-ir = { path = "../omniscope-ir" }
omniscope-pipeline = { path = "../omniscope-pipeline" }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "analysis_passes"
harness = false