[package]
name = "omniscope-pipeline"
version = "0.9.0"
edition = "2021"
authors = ["OmniScope Team"]
description = "Pipeline orchestration for coordinating analysis passes in OmniScope"
license = "Apache-2.0"
repository = "https://github.com/Timwood0x10/OmniScope-rs"
keywords = ["static-analysis", "llvm", "pipeline", "orchestration", "ffi"]
categories = ["development-tools", "development-tools::debugging"]

[dependencies]
omniscope-core = { version = "0.9.0", path = "../omniscope-core" }
omniscope-types = { version = "0.9.0", path = "../omniscope-types" }
omniscope-ir = { version = "0.9.0", path = "../omniscope-ir" }
omniscope-pass = { version = "0.9.0", path = "../omniscope-pass" }

serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
