[package]
name = "omniscope-registry"
version = "0.1.0"
edition = "2021"
authors = ["OmniScope Team"]
description = "Function and symbol registry for tracking FFI boundaries in OmniScope"
license = "Apache-2.0"
repository = "https://github.com/Timwood0x10/OmniScope-rs"
keywords = ["static-analysis", "llvm", "registry", "ffi", "symbols"]
categories = ["development-tools", "development-tools::debugging"]

[dependencies]
omniscope-core = { path = "../omniscope-core" }
omniscope-types = { path = "../omniscope-types" }

dashmap = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
