[package]
name = "omniscope-types"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["OmniScope Team"]
description = "Type definitions and data structures for OmniScope static analyzer"
license = "Apache-2.0"
repository = "https://github.com/Timwood0x10/OmniScope-rs"
keywords = ["static-analysis", "llvm", "ffi", "types", "data-structures"]
categories = ["development-tools", "development-tools::debugging"]

[dependencies]
# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Collections
indexmap = { workspace = true }
smallvec = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Configuration file support
dirs = "5"

[dev-dependencies]
pretty_assertions = { workspace = true }
